# hdx-scraper-hno

./: CLAUDE.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.config/: pre-commit-config.yaml
.github/workflows/: publish.yaml  run-python-script.yaml  run_script.yaml
documentation/: pydoc-markdown.yaml
src/hapi/pipeline/hno/: __main__.py  caseload_json.py  disaggregated_attachments.py  hapi_api.py  hapi_patch.py  hdx_dataset_static.yaml  monitor_json.py  patch_generation.py  plan.py  plans.py  project_configuration.yaml
src/hdx/scraper/hno/: __main__.py  caseload_json.py  dataset_generator.py  disaggregated_attachments.py  hapi_dataset_generator.py  hapi_output.py  hdx_dataset_static.yaml  mappings.py  monitor_json.py  plan.py  progress_json.py  project_configuration.yaml  timeperiod_helper.py  utilities.py
src/hdx/scraper/hno/config/: category_mapping.csv  (+9 more)
tests/: conftest.py  test_dataset_generator.py  test_main.py
tests/fixtures/: afg_hpc_needs_api_2024.csv  hdx_hapi_humanitarian_needs_global_2024.csv  hno_data_afg.csv  hno_data_global.csv  hno_data_sdn.csv  hpc_hno_2024.csv  sdn_hpc_needs_api_2021.csv
tests/fixtures/input/: 1185-responsemonitoring-includecaseloaddisaggregation-true-includeindicatordisaggregation-false-disaggregationonlytotal-false.json  1188-responsemonitoring-includecaseloaddisaggregation-true-includeindicatordisaggregation-false-disaggregationonlytotal-false.json  afghanistan-humanitarian-needs.json  config-category-mapping.csv  progress-2024.json  sudan-humanitarian-needs.json
