#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-hno"
requires-python = ">=3.8"
dependencies = [
  "hdx-python-scraper>= 2.7.2",
  "hdx-python-api>= 6.6.5",
  "hdx-python-country>= 4.1.1",
  "hdx-python-utilities>= 4.0.5",
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-hno"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.hno.__main__:main"
